--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div class="score" id="score2">0</div>
                 <div>
                     <button class="btn btn1" onclick="scoreOneAway()">+1</button>
